# num2words2

./: .gitignore  .pre-commit-config.yaml  .pypirc.example  CONTRIBUTING.md  CURRENCY_SUPPORT_ANALYSIS.md  FINDINGS.md  LANGUAGES.md  LANGUAGE_IMPLEMENTATION_STATUS.md  LOCAL_TESTING.md  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  README.rst  README_num2words2.md  REFERENCE.md  SETUP_PYPI_SECRET.md  STRUCTURAL_ISSUES_ANALYSIS.md  TEST_COVERAGE_REPORT.md  analyze_test_coverage.py  enhance_critical_tests.py  fix_flake8_issues.py  generate_comprehensive_tests.py  generate_standard_tests.py  generate_test_e2e_sentences.py  generate_tests_with_ai.py  merge_comprehensive_tests.py  pyproject.toml  run_all_tests.py  run_generate_sentences.sh  setup.py  test_all_python_versions.py  test_e2e_sentences.csv  test_local.sh  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  language_support.md
.github/workflows/: aur-publish.yml  ci.yml  codeql-analysis.yml  crates.yml  e2e-tests.yml  lint.yml  manual-publish.yml  pr-size.yml  python-publish.yml  refresh-readme-badges.yml  release.yml  scheduled-test.yml
docs/wiki/: API-Reference.md  Aviation-ICAO-English.md  CLI-Reference.md  Currency-Cheques-and-Fractions.md  Development-and-Contributing.md  Getting-Started.md  Home.md  Migration-from-num2words.md  Sentence-Conversion.md  Supported-Languages-and-Locales.md  _Footer.md  _Sidebar.md
migration/: migrate_to_num2words2.py
num2words/: __init__.py  lang_BN.py  lang_BS.py  lang_CE.py  lang_CY.py  lang_EL.py  lang_GU.py  lang_HE.py  lang_HR.py  lang_KZ.py  lang_ML.py  lang_MN.py  lang_PL.py  lang_RU.py  lang_SN.py  lang_SQ.py  lang_SW.py  lang_TL.py  lang_TR.py  lang_UK.py  lang_UR.py
num2words2/: __init__.py  __main__.py  _version.py  base.py  currency.py  grouping.py  lang_AF.py  lang_AM.py  lang_AR.py  lang_AS.py  lang_AZ.py  lang_BA.py  lang_BAN.py  lang_BE.py  lang_BG.py  lang_BM.py  lang_BN.py  lang_BO.py  lang_BR.py  lang_BS.py  lang_CA.py  lang_CE.py  lang_CEB.py  lang_CKB.py  lang_CNH.py  lang_CS.py  lang_CY.py  lang_DA.py  lang_DE.py  lang_DV.py  lang_EL.py  lang_EN.py  lang_EN_AERO.py  lang_EN_IN.py  lang_EN_NE.py  lang_EN_NG.py  lang_EO.py  lang_ES.py  lang_ES_CO.py  lang_ES_CR.py  (+116 more)
num2words2/converters/: comprehensive_converter.py  lang_registry.py  sentence.py
packaging/aur/python-num2words2/: .SRCINFO  PKGBUILD  README.md
paper/: num2words2_words2num2_arxiv.tex
rust/: Cargo.toml
rust/num2words2-core/: Cargo.toml
rust/num2words2-core/src/: base.rs  currency.rs  floatpath.rs  lang_af.rs  lang_am.rs  lang_ar.rs  lang_as.rs  lang_az.rs  lang_ba.rs  lang_ban.rs  lang_be.rs  lang_bg.rs  lang_bm.rs  lang_bn.rs  lang_bo.rs  lang_br.rs  lang_bs.rs  lang_ca.rs  lang_ce.rs  lang_ceb.rs  lang_ckb.rs  lang_cnh.rs  lang_cs.rs  lang_cy.rs  lang_da.rs  lang_de.rs  lang_dv.rs  lang_el.rs  lang_en.rs  lang_en_aero.rs  lang_en_aero_faa.rs  lang_en_aero_nato.rs  lang_en_aero_us_army.rs  lang_en_aero_usn.rs  lang_en_in.rs  lang_en_ne.rs  lang_en_ng.rs  lang_en_np.rs  lang_eo.rs  lang_es.rs  (+124 more)
rust/num2words2-py/: Cargo.toml  pyproject.toml
rust/num2words2-py/src/: lib.rs  sentencepath.rs
tests/: basetest.py  run_e2e_tests.py  test_478_en_aero.py  test_584_fractions.py  test_603_decimal_precision.py  test_af.py  test_af.py.backup_20260118_002047  test_all_python_versions.py  test_am.py  test_ar.py  test_ar.py.backup_20260118_002047  test_az.py  test_base.py  test_base.py.backup_20260118_002047  test_be.py  test_bg_coverage.py  test_bn.py  test_bn.py.backup_20260118_002047  test_bs.py  test_ca.py  test_ca.py.backup_20260118_002047  test_ce.py  test_cli.py  test_comprehensive_cli.py  test_comprehensive_converter.py  test_comprehensive_converter_simple.py  test_coverage_gaps.py  test_coverage_tr_sl.py  test_cs.py  test_cs_standard.py.backup_20260118_002047  test_currency.py  test_currency_3decimal_and_cheque.py  test_currency_comprehensive.py  test_cy.py  test_cy.py.backup_20260118_002047  test_da.py  test_da_standard.py.backup_20260118_002047  test_de.py  test_de.py.backup_20260118_002047  test_e2e_sentences.py  (+103 more)
tests/data/: e2e_test_sentences.csv  e2e_test_suite.csv
tests/lang/: test_af.py  test_am.py  test_ar.py  test_as.py  test_az.py  test_ba.py  test_be.py  test_bg.py  test_bg_coverage.py  test_bn.py  test_bo.py  test_br.py  test_bs.py  test_ca.py  test_ce.py  test_coverage_exhaustive.py  test_cs.py  test_cy.py  test_da.py  test_de.py  test_dv.py  test_el.py  test_en.py  test_en_in.py  test_en_ne.py  test_en_ng.py  test_en_np.py  test_eo.py  test_es.py  test_es_co.py  test_es_cr.py  test_es_gt.py  test_es_hn.py  test_es_ni.py  test_es_ve.py  test_et.py  test_et_coverage.py  test_eu.py  test_fa.py  test_fi.py  (+99 more)
tests/scripts/: generate_llm_tests.py  run_e2e_tests.py
