[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "num2words2"
dynamic = ["version"]
license = "LGPL-2.1-only"
license-files = ["COPYING"]
description = "Modern, actively maintained fork of num2words optimized for LLM/AI/speech applications."
readme = "README.rst"
requires-python = ">=3.10"
dependencies = ["docopt>=0.6.2"]
authors = [
    {name = "Jean-Louis Queguiner", email = "jean-louis.queguiner@gmail.com"}
]
maintainers = [
    {name = "Jean-Louis Queguiner", email = "jean-louis.queguiner@gmail.com"}
]
keywords = ["number", "word", "numbers", "words", "convert", "conversion",
            "i18n", "localisation", "localization", "internationalisation",
            "internationalization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/jqueguiner/num2words2"
Documentation = "https://github.com/jqueguiner/num2words2/wiki"
Repository = "https://github.com/jqueguiner/num2words2.git"
"Bug Tracker" = "https://github.com/jqueguiner/num2words2/issues"

[project.scripts]
num2words2 = "num2words2.__main__:main"

[tool.setuptools]
packages = ["num2words2", "num2words2.converters"]
include-package-data = true

[tool.setuptools.package-data]
num2words2 = ["*.py", "py.typed"]

[tool.setuptools_scm]
write_to = "num2words2/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
write_to_template = '''# Auto-generated version file
__version__ = "{version}"
__version_tuple__ = {version_tuple}
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["num2words2/_version.py"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | num2words2/_version.py
)/
'''
