[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "num2words2"
# Static base version. The release CI overrides it from the pushed git tag
# (see .github/workflows/release.yml); bump here for local source builds.
version = "1.0.10"
license = "LGPL-2.1-only"
license-files = ["COPYING"]
description = "Rust port of the num2words conversion engine with a Python binder — number-to-words in 120+ languages, optimized for LLM/AI/speech."
readme = "README.rst"
requires-python = ">=3.10"
authors = [
    {name = "Jean-Louis Queguiner", email = "jean-louis.queguiner@gmail.com"}
]
maintainers = [
    {name = "Jean-Louis Queguiner", email = "jean-louis.queguiner@gmail.com"}
]
keywords = ["number", "word", "numbers", "words", "convert", "conversion",
            "i18n", "localisation", "localization", "internationalisation",
            "internationalization", "rust"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/jqueguiner/num2words2"
Documentation = "https://github.com/jqueguiner/num2words2/wiki"
Repository = "https://github.com/jqueguiner/num2words2.git"
"Bug Tracker" = "https://github.com/jqueguiner/num2words2/issues"

# ---- maturin: mixed Rust/Python project -------------------------------------
# The compiled engine lives in ./rust (vendored crate `num2words2-py`, lib
# `_rust`); the thin Python binder is ./num2words2. maturin bundles both into a
# single per-platform wheel. Default build embeds lingua-rs language-detection
# models (~140MB); pass `--no-default-features` for the slim (~2MB) wheel with
# `num2words_sentence(lang=None)` auto-detection disabled.
[tool.maturin]
manifest-path = "rust/num2words2-py/Cargo.toml"
python-source = "."
module-name = "num2words2._rust"
features = ["pyo3/extension-module"]
strip = true
include = ["num2words2/py.typed"]

[tool.isort]
profile = "black"
line_length = 88
skip = ["num2words2/_version.py"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | num2words2/_version.py
)/
'''
