[workspace]
members = ["num2words2-core", "num2words2-py"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jqueguiner/num2words2"
homepage = "https://github.com/jqueguiner/num2words2"
authors = ["jqueguiner"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
